# Garvis

./: HYBRID_SEARCH_V2_DOCUMENTATION.md  LLM_INTEGRATION_ROADMAP.md  RAG_ARCHITECTURE.md  RAG_ROADMAP.md  SPRINT1_INTEGRATION_GUIDE.md  VISION_AWARE_RAG_DOCUMENTATION.md  brief.md  feuille_de_route_ocr_spécifique.md  test_deepseek_sample.txt
gravis-app/: .dockerignore  AWCS_IMPLEMENTATION_DELTAS.md  modal.md  (+30 more)
gravis-app/src-tauri/: Cargo.toml  PDF_ALTERNATIVES_GUIDE.md  bench_ef32.json  bench_fixed.json  bench_isolated.json  benchmark_custom_e5.rs  benchmark_results.json  create_macos_icon.py  production_metrics.json  resize_icons.py  results.json  tauri.conf.json  test_business_adaptive_chunking.rs  test_business_adaptive_chunking_real.rs  test_business_metadata.rs  test_business_metadata_enhanced.rs  test_custom_e5.rs  test_document_classifier.rs  test_document_processor_phase1.rs  test_embedding_simple.rs  test_kpi_debug.rs  test_ocr_basic.rs  test_ocr_deepseek_pdf.rs  test_ocr_with_preview.rs  test_pdf_normalized.rs  test_pdf_simple.rs  test_phase2_integration.rs  test_phase2_pdf_ocr_complete.rs  test_phase2_pdf_rag_complete.rs  test_phase2_pdf_simple.rs  test_phase2_simplified_rag.rs  test_phase3_complete_integration.rs  test_phase3_e2e_business.rs  test_phase3_simple.rs  test_phase3_summary.rs  test_phase3_validation.rs  test_phase3_validation_quick.rs  test_pipeline_complete_e2e.rs  test_qdrant_simple.rs  test_rag_pipeline_custom.rs  (+2 more)
gravis-app/src-tauri/capabilities/: default.json  window-communication.json
gravis-app/src-tauri/icons/: icon.icns
gravis-app/src-tauri/qdrant_storage/: raft_state.json
gravis-app/src-tauri/qdrant_storage/collections/benchmark_custom_e5/: config.json
gravis-app/src-tauri/qdrant_storage/collections/benchmark_custom_e5/0/: newest_clocks.json
gravis-app/src-tauri/qdrant_storage/collections/benchmark_custom_e5/0/segments/37fef67c-03e8-4534-a132-9cd27efa9117/: segment.json
gravis-app/src-tauri/qdrant_storage/collections/benchmark_custom_e5/0/segments/37fef67c-03e8-4534-a132-9cd27efa9117/vector_index/: hnsw_config.json
gravis-app/src-tauri/qdrant_storage/collections/benchmark_custom_e5/0/segments/786e08a7-9e76-48e2-afe5-30a9453e0168/payload_index/: IDENTITY  LOG  MANIFEST-000005
gravis-app/src-tauri/qdrant_storage/collections/benchmark_custom_e5/0/segments/9ac7b9a3-0728-49ae-a56a-c732d5c9ee6f/: id_tracker.mappings  id_tracker.versions
gravis-app/src-tauri/qdrant_storage/collections/benchmark_custom_e5/0/segments/dd2d5047-c21f-4b76-aa6f-68faafe9f8ca/payload_index/: IDENTITY  LOG  MANIFEST-000005
gravis-app/src-tauri/qdrant_storage/collections/benchmark_test/0/: replica_state.json
gravis-app/src-tauri/qdrant_storage/collections/benchmark_test/0/segments/28f418e3-95e7-4247-b1f3-0e623126c733/payload_index/: IDENTITY  LOG  MANIFEST-000005
gravis-app/src-tauri/qdrant_storage/collections/benchmark_test/0/segments/c3e2ce47-3523-4284-8b73-e2565b488973/payload_index/: IDENTITY  LOG  MANIFEST-000005
gravis-app/src-tauri/qdrant_storage/collections/benchmark_test/0/segments/e8e54814-c9dc-48ab-83f8-bfb809ca5ccc/payload_index/: IDENTITY  LOG  MANIFEST-000005
gravis-app/src-tauri/qdrant_storage/collections/benchmark_test/0/segments/f105fd75-5acf-4df1-9924-6d51514a5b50/payload_index/: IDENTITY  LOG  MANIFEST-000005
gravis-app/src-tauri/qdrant_storage/collections/benchmark_test/0/segments/f60d41c2-afa7-4128-8639-13469ea17410/payload_index/: IDENTITY  LOG  MANIFEST-000005
gravis-app/src-tauri/qdrant_storage/collections/test_custom_e5_pipeline/: config.json
gravis-app/src-tauri/qdrant_storage/collections/test_custom_e5_pipeline/0/: newest_clocks.json
gravis-app/src-tauri/qdrant_storage/collections/test_custom_e5_pipeline/0/segments/14f58514-a030-4860-9513-52958179c224/payload_index/: IDENTITY  LOG  MANIFEST-000005
gravis-app/src-tauri/qdrant_storage/collections/test_custom_e5_pipeline/0/segments/2322a9e4-8831-49e0-93f6-35afe7102eaa/: mutable_id_tracker.mappings
gravis-app/src-tauri/qdrant_storage/collections/test_custom_e5_pipeline/0/segments/2322a9e4-8831-49e0-93f6-35afe7102eaa/payload_index/: IDENTITY  LOG  MANIFEST-000005
gravis-app/src-tauri/qdrant_storage/collections/test_rest/0/: newest_clocks.json
gravis-app/src-tauri/qdrant_storage/collections/test_rest/0/segments/80394c9e-55ca-4d85-870e-fbedb1e2a7ef/payload_index/: IDENTITY  LOG  MANIFEST-000005
gravis-app/src-tauri/src/: ext_server.rs  lib.rs  main.rs  menu.rs  tray.rs  window_commands.rs
gravis-app/src-tauri/src/awcs/: commands.rs  mod.rs  types.rs  utils.rs
gravis-app/src-tauri/src/awcs/core/: extractor.rs  global_shortcuts.rs  intention_analyzer.rs  manager.rs  mod.rs  permissions.rs  screen_capture.rs  screen_capture_backup.rs
gravis-app/src-tauri/src/awcs/extractors/: accessibility_extractor.rs  applescript_extractor.rs  dom_extractor.rs  mod.rs  ocr_extractor.rs  window_detector.rs
gravis-app/src-tauri/src/rag/: benchmark.rs  commands.rs  custom_e5.rs  device_pool.rs  direct_chat_commands.rs  document_sync_manager.rs  embedder.rs  embedding_batcher.rs  mod.rs  ocr_commands.rs  qdrant.rs  qdrant_rest.rs  search_optimizer.rs
gravis-app/src-tauri/src/rag/core/: direct_chat.rs  direct_chat_manager.rs  embedder_manager.rs  ingestion_engine.rs  mod.rs  qdrant_rest.rs  source_spans.rs  source_spans_integration_test.rs  unified_cache.rs
gravis-app/src-tauri/src/rag/ocr/: cache.rs  commands.rs  layout_analyzer.rs  mod.rs  pdf_extract_simple.rs  pdf_lopdf.rs  pdf_poppler_utils.rs  preprocessor.rs  tesseract.rs  text_normalizer.rs  types.rs
gravis-app/src-tauri/src/rag/processing/: business_metadata.rs  document_classifier.rs  document_processor.rs  figure_chunk_builder.rs  figure_detector.rs  figure_ocr.rs  mod.rs  smart_chunker.rs  span_aware_chunker.rs
gravis-app/src-tauri/src/rag/search/: custom_e5.rs  enhanced_bm25.rs  mmr_reranker.rs  mod.rs  numerical_reranker.rs  query_aware_reranker.rs  scoring_engine.rs  search_optimizer.rs  section_prior.rs
gravis-app/src-tauri/src/rag/text/: ligature_aggregator.rs  ligature_cleaner.rs  mod.rs  unicode_utils.rs
(+81 files in other folders)
